tests/api/reference/negative/02-descending-range.asm
for value in range(2, 0) {
    emit.u8(value)
}
